# nano-t5-malaysian-dialect-MT

./: .gitignore  README.md  pyproject.toml
configs/: sweep_config.yaml  train_config.yaml  train_config_stage2.yaml  train_config_sweep.yaml
notebooks/: dataset_explorer.ipynb  dialect_detector.ipynb  dialect_dict.json  model_eval.ipynb  model_test.ipynb  preprocess.ipynb
src/: config.py  dataloader.py  dialect_detector.py  metrics.py  processor.py  trainer.py  trainer_ddp.py
