[project]
name = "alif-ml-eng-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.8",
    "polars>=1.36.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sacrebleu>=2.5.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupter>=0.1.0",
]
